[package]
name = "ntz-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Command line arguments 
clap = { version = "4.4", features = ["derive"] }

# Network/TUN interfaces
tun-rs = "2.8"

# Async runtime and web management portal
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
axum = "0.7"

# Cryptography 
ml-kem = "0.2.0"
kem = "0.2"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
chacha20poly1305 = "0.10"
arrayref = "0.3"

# Management-plane storage and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"